--- a/UnderstandingARC/Base.lproj/Main.storyboard
+++ b/UnderstandingARC/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -19,6 +19,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QyC-fq-WAp">
                                 <rect key="frame" x="208" y="28" width="185" height="30"/>
+                                <animations/>
                                 <state key="normal" title="Create strong ref to human"/>
                                 <connections>
                                     <action selector="createPerson:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gf4-Qi-xNC"/>
@@ -26,6 +27,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tv9-aY-681">
                                 <rect key="frame" x="236" y="71" width="129" height="30"/>
+                                <animations/>
                                 <state key="normal" title="Remove human ref"/>
                                 <connections>
                                     <action selector="removePersonRef:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mvq-2N-Lya"/>
@@ -33,6 +35,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iRb-Rl-UJN">
                                 <rect key="frame" x="223" y="109" width="155" height="30"/>
+                                <animations/>
                                 <state key="normal" title="Create reference cycle"/>
                                 <connections>
                                     <action selector="createStrongReferenceCycle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z3g-ze-RoH"/>
@@ -40,27 +43,51 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DTn-Yb-xSo">
                                 <rect key="frame" x="177" y="147" width="247" height="30"/>
+                                <animations/>
                                 <state key="normal" title="Avoid reference cycle with unowned"/>
                                 <connections>
                                     <action selector="demoUnownedRefernces:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lcd-Ok-oAF"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uar-xd-ide">
+                                <rect key="frame" x="191" y="185" width="218" height="30"/>
+                                <animations/>
+                                <state key="normal" title="See a weak reference dissapear"/>
+                                <connections>
+                                    <action selector="demoUnownedRefernces:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ArJ-Tb-tm3"/>
+                                    <action selector="makeWekaReferencedObjectDisappear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k4T-rD-bg0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhC-wa-Bdj">
+                                <rect key="frame" x="212" y="223" width="177" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Create weak ref to human"/>
+                                <connections>
+                                    <action selector="createWeakRefToHuman:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jej-wp-2TJ"/>
+                                </connections>
+                            </button>
                         </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="tv9-aY-681" firstAttribute="top" secondItem="QyC-fq-WAp" secondAttribute="bottom" constant="13" id="82i-If-iH4"/>
                             <constraint firstItem="iRb-Rl-UJN" firstAttribute="centerX" secondItem="tv9-aY-681" secondAttribute="centerX" id="9um-IM-16b"/>
+                            <constraint firstItem="Uar-xd-ide" firstAttribute="top" secondItem="DTn-Yb-xSo" secondAttribute="bottom" constant="8" symbolic="YES" id="RBS-5H-4mV"/>
+                            <constraint firstItem="uhC-wa-Bdj" firstAttribute="top" secondItem="Uar-xd-ide" secondAttribute="bottom" constant="8" symbolic="YES" id="WYy-dj-OPT"/>
                             <constraint firstItem="iRb-Rl-UJN" firstAttribute="top" secondItem="tv9-aY-681" secondAttribute="bottom" constant="8" symbolic="YES" id="Yt4-gO-oV1"/>
                             <constraint firstItem="QyC-fq-WAp" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="Zke-RQ-ldV"/>
+                            <constraint firstItem="Uar-xd-ide" firstAttribute="centerX" secondItem="DTn-Yb-xSo" secondAttribute="centerX" id="evg-py-Y8W"/>
                             <constraint firstItem="QyC-fq-WAp" firstAttribute="centerX" secondItem="tv9-aY-681" secondAttribute="centerX" id="fp5-cZ-9ih"/>
                             <constraint firstItem="DTn-Yb-xSo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jUe-we-Pdm"/>
                             <constraint firstItem="DTn-Yb-xSo" firstAttribute="centerX" secondItem="iRb-Rl-UJN" secondAttribute="centerX" id="kbD-76-AhR"/>
+                            <constraint firstItem="uhC-wa-Bdj" firstAttribute="centerX" secondItem="Uar-xd-ide" secondAttribute="centerX" id="niS-ps-9gT"/>
                             <constraint firstItem="DTn-Yb-xSo" firstAttribute="top" secondItem="iRb-Rl-UJN" secondAttribute="bottom" constant="8" symbolic="YES" id="uHt-Uc-kfZ"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="570" y="284"/>
         </scene>
     </scenes>
 </document>
