--- a/UnderstandingARC/Base.lproj/Main.storyboard
+++ b/UnderstandingARC/Base.lproj/Main.storyboard
@@ -49,15 +49,6 @@
                                     <action selector="demoUnownedRefernces:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lcd-Ok-oAF"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uar-xd-ide">
-                                <rect key="frame" x="191" y="185" width="218" height="30"/>
-                                <animations/>
-                                <state key="normal" title="See a weak reference dissapear"/>
-                                <connections>
-                                    <action selector="demoUnownedRefernces:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ArJ-Tb-tm3"/>
-                                    <action selector="makeWekaReferencedObjectDisappear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k4T-rD-bg0"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhC-wa-Bdj">
                                 <rect key="frame" x="212" y="223" width="177" height="30"/>
                                 <animations/>
@@ -66,21 +57,29 @@
                                     <action selector="createWeakRefToHuman:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jej-wp-2TJ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BEX-cF-RFu">
+                                <rect key="frame" x="193" y="261" width="214" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Unowned difference from weak"/>
+                                <connections>
+                                    <action selector="demoUnownedRefernces2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Kcb-rC-77n"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="tv9-aY-681" firstAttribute="top" secondItem="QyC-fq-WAp" secondAttribute="bottom" constant="13" id="82i-If-iH4"/>
+                            <constraint firstItem="BEX-cF-RFu" firstAttribute="centerX" secondItem="uhC-wa-Bdj" secondAttribute="centerX" id="86Y-ZX-7rG"/>
                             <constraint firstItem="iRb-Rl-UJN" firstAttribute="centerX" secondItem="tv9-aY-681" secondAttribute="centerX" id="9um-IM-16b"/>
-                            <constraint firstItem="Uar-xd-ide" firstAttribute="top" secondItem="DTn-Yb-xSo" secondAttribute="bottom" constant="8" symbolic="YES" id="RBS-5H-4mV"/>
-                            <constraint firstItem="uhC-wa-Bdj" firstAttribute="top" secondItem="Uar-xd-ide" secondAttribute="bottom" constant="8" symbolic="YES" id="WYy-dj-OPT"/>
                             <constraint firstItem="iRb-Rl-UJN" firstAttribute="top" secondItem="tv9-aY-681" secondAttribute="bottom" constant="8" symbolic="YES" id="Yt4-gO-oV1"/>
                             <constraint firstItem="QyC-fq-WAp" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="Zke-RQ-ldV"/>
-                            <constraint firstItem="Uar-xd-ide" firstAttribute="centerX" secondItem="DTn-Yb-xSo" secondAttribute="centerX" id="evg-py-Y8W"/>
                             <constraint firstItem="QyC-fq-WAp" firstAttribute="centerX" secondItem="tv9-aY-681" secondAttribute="centerX" id="fp5-cZ-9ih"/>
                             <constraint firstItem="DTn-Yb-xSo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jUe-we-Pdm"/>
                             <constraint firstItem="DTn-Yb-xSo" firstAttribute="centerX" secondItem="iRb-Rl-UJN" secondAttribute="centerX" id="kbD-76-AhR"/>
-                            <constraint firstItem="uhC-wa-Bdj" firstAttribute="centerX" secondItem="Uar-xd-ide" secondAttribute="centerX" id="niS-ps-9gT"/>
+                            <constraint firstItem="BEX-cF-RFu" firstAttribute="top" secondItem="uhC-wa-Bdj" secondAttribute="bottom" constant="8" symbolic="YES" id="lNL-Ba-V0n"/>
+                            <constraint firstItem="uhC-wa-Bdj" firstAttribute="centerX" secondItem="DTn-Yb-xSo" secondAttribute="centerX" id="nPy-85-xPX"/>
+                            <constraint firstItem="uhC-wa-Bdj" firstAttribute="top" secondItem="DTn-Yb-xSo" secondAttribute="bottom" constant="46" id="swM-jb-UZc"/>
                             <constraint firstItem="DTn-Yb-xSo" firstAttribute="top" secondItem="iRb-Rl-UJN" secondAttribute="bottom" constant="8" symbolic="YES" id="uHt-Uc-kfZ"/>
                         </constraints>
                     </view>
